# sos_tuwien

./: .dockerignore  .env.example  .gitignore  ACO_MESSAGE_PASSING_REVIEW.md  Dockerfile  README.md  best_params.json  create_dataset.sh  docker-entrypoint.sh  params_example.json  pyproject.toml  run.sh  run_grid_search.sh  run_xmpp_server.sh
assignment1/: README.md  plot_pheromones.py  pyproject.toml  run.sh
assignment1/src/: find_solution.py  run.py
assignment1/src/aco/: __init__.py  ant_agent.py  coordinator_agent.py  pheromone_manager_agent.py
assignment1/src/prepare_data/: fetch_travel_time.py
assignment1/src/utils/: __init__.py  result_statistics.py  route_plotter.py
assignment3/: Cyclists_251212 copy.ipynb  analyze_dataset.py  analyze_dataset_with_provenance.py  main.py  pyproject.toml  solution.ipynb  som.ipynb
assignment3/data/: analysis_provenance_triples.txt  analysis_reports.json  credit-g_croissant.json  credit-g_provenance.ttl  dataset_description_triples.py
assignment3/provenance_docs/: Cyclists_251212.ipynb
assignment3/som_toolbox/: somtoolbox.py
assignment3/som_toolbox/visualizations/: chessboard.py  clustering.py  complane.py  dmatrix.py  hithistogram.py  metromap.py  neighbourhood_graph.py  piechart.py  qerror.py  sdh.py  time_series.py  umatrix.py  upmatrix.py
data/: places.json  raw_data.json  travel_times.json
src/: run.py
src/aco/: ant_agent.py  coordinator_agent.py  pheromone_manager_agent.py
src/ga/: __init__.py  genetic_algorithm.py
src/prepare_data/: fetch_travel_time.py  prepare_places.py
src/utils/: __init__.py  data_loader.py  route_evaluator.py  route_plotter.py
