[project]
name = "sos_exercise_1"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Widerhofer-Kaukal"},
    {name = "Florian Mende"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "googlemaps (>=4.10.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "spade (>=4.1.2,<5.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "deap (>=1.4.3,<2.0.0)",
    "matplotlib (>=3.9.2,<4.0.0)",
    "plotly>=6.5.0",
    "pandas>=2.3.3",
    "requests (>=2.32.5,<3.0.0)",
]





