[project]
name = "assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "holoviews>=1.22.1",
    "ipykernel>=7.1.0",
    "jupyter-bokeh>=4.0.5",
    "matplotlib>=3.10.8",
    "minisom>=2.3.5",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "panel>=1.8.5",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "starvers",
]

[tool.uv.sources]
starvers = { git = "https://github.com/GreenfishK/starvers.git" }
